PRESIDECMS-1983 Fix heading overlapping with text.

--- a/system/assets/css/admin/specific/login/loginLayout.less
+++ b/system/assets/css/admin/specific/login/loginLayout.less
@@ -60,9 +60,9 @@ html.presidecms {
 			}
 
 			.login-help-title {
-				height         : 35px;
-				font-size      : 2em;
-				margin-top     : 23px;
+				min-height : 35px;
+				font-size  : 2em;
+				margin-top : 23px;
 			}
 
 			.login-help-image {
